all tests are passing

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ wheel
 djangorestframework>=3.14.0
 djangorestframework-simplejwt
 dj-rest-auth
+django-cors-headers
 django-allauth==0.57.0
 django-mfa2
 icecream
